* added authentication/authorization logic (Identity + jwt)

--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -7,5 +7,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BookStore;Trusted_Connection=True;ConnectRetryCount=0"
+  },
+  "AuthOptions": {
+    "JwtKey": "key",
+    "JwtIssuer": "BookStore",
+    "JwtAudience": "https://localhost:44365",
+    "JwtExpireDays": 30
   }
+  
 }
